# DyWiSE

./: CMakeLists.txt  README.md  main.cpp  primitive.cpp  primitive.h
GGM/: GGMNode.h  GGMTree.h
Util/: CommonUtil.cpp  CommonUtil.h
